done writing the js for cart

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -4,7 +4,10 @@
 @import "./abstracts/variable";
 @import "./abstracts/map.scss";
 @import "./abstracts/mixing.scss";
+
 @import "./abstracts/products.scss";
+@import "./abstracts/cart.scss";
 @import "./abstracts/css-variables.scss";
+
 @import "~bootstrap/scss/bootstrap";
 
